@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b8b34b7173c154444cd9adec36b2ccf514c0ddfa ChangeLog
+SHA1 2d7106716c748db1312b6e83bca95c312e2b7cdc ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 63b0a7bc52979f53580e8cde0914f73996ab5ddd META.yml
-SHA1 e82dee2a8e4bffaa16233903fb817bee2d06220b Makefile.PL
+SHA1 5058b833d7fde901bda36d8484b048eca3fd010a META.yml
+SHA1 f8753fb8d1146c3bfdf475127f206108003eeb6a Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 21fdb20b0b3a48811907010289093a9e415288b6 lib/Net/FullAuto.pm
+SHA1 3723c7c5c20c9592d29873abefd01dbf78b3b3f3 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUHaA6AAoJEBa/9Pad787ESUMH/A6XsJ3MQVefkJEv88Karlpm
-7ml58HalFgUsDZEYK8j8TvhZnxm/mKayH7HVTnFYsV3OotzEd7dHxqE1ndN5jPsP
-kcU4tasvM4InJq8O1t7GZ/6zX7P8RHJWcHejpxDua3cBe2CvzbnNf2sUGXkUa+D9
-RFi7QVAq/9Rd2aGm1g4gym1jZ00cT9Z7KHtX3P5xXMao3lhg/Yu/cEcCWyn/6xu1
-pVM4kKd82apkmED89w4JWji8CMpHNxRxEL+gDowtU4GBFCmrLf8aijQAPOxCzFGa
-8Sbo1irnqYqyMhR1p7Aa5X/08awOp/EMcNTJaCgD0NLwREDBM3lW0KcHdzjyjvw=
-=mPYg
+iQEcBAEBAgAGBQJUHaZ0AAoJEBa/9Pad787EezEH/RJo4dew4vzaDGjRl+ouZghO
+rwxPRFhfn3cckT+xwBnu3/cucCs6ecs9p5xmzpgi0ur9o45ss+ZxyyftOK/sgp+7
+H3robw81lOtqDQ7Uc3INNVwdJc9CVRnvOFlVjrRJRMFwvsyf4jgHwyKy0egPWrz0
+6KIBMZRbIDMPizZQFz0eZPH2SxjvAX/lEYWXOTKvhnFBuQ77mXOoqsK7bgkEiVgO
+h7xI0N5ac9tcw9jeobzjVkrX7xAXZEnjSSvssFnOQDygW+6xB9TBwvmnbuSeiYF5
+DGkouc6tp4yYP8ukgBTx2jg/0FEnUjQCIHeJikc751phPX45hmAd6j2ecY/o3lM=
+=226b
 -----END PGP SIGNATURE-----
