@@ -22,6 +22,13 @@
 
 2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.999999999912 released.
+
+        * Re-arranged some dependencies in Makefile.PL.
+
+
+2014-09-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.999999999911 released.
 
         * Added dependencies for CPAN::Mini.
